# stocks

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
stock/: admin.py  handler.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
stock/management/commands/: populate_db.py
stock/migrations/: 0001_initial.py
stock/tests/: conftest.py  factories.py
stock/tests/handlers/: test_handler.py
stock/tests/views/: test_admin_stock_viewsets.py  test_portfolio_viewset.py  test_stock_viewset.py  test_transaction_viewsets.py
stratiphy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: factories.py
